<resources>
    <string name="app_name">AndroidProject</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_product">Quản lý sản phẩm</string>
    <string name="nav_bill">Quản lý hóa đơn</string>
    <string name="nav_report">Report</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_bill">Danh sách hóa đơn</string>
    <string name="title_category">Danh sách loại đồ uống</string>
    <string name="title_product">Danh sách sản phẩm</string>
    <string name="title_staff">Danh sách nhân viên</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="navigation_drawer_open">Mở thanh điều hướng</string>
    <string name="navigation_drawer_close">Đóng thanh điều hướng</string>
    <string name="invoice_have_not_product">Hóa đơn không có sản phẩm</string>
    <string name="value_setup">0.0</string>
    <string name="validate_quantity">Không đúng định dạng số lượng!</string>
    <string name="validate_price">Không đúng định dạng đơn giá</string>
    <string name="error_message">Có lỗi xảy ra!</string>
    <string name="error_username">Tài khoản không hợp lệ</string>
    <string name="error_password">Mật khẩu không hợp lệ</string>
    <string name="login_success_message">Đăng nhập thành công</string>
    <string name="login_fail_message">Mật khẩu không chính xác hoặc tên đăng nhập không tồn tại!</string>
    <string name="logout_message">Đăng xuất khỏi ứng dụng</string>
    <string name="choose_product_title_toolbar">Chọn sản phẩm để xóa</string>
    <string name="add_success_message">Thêm thành công</string>
    <string name="update_success_message">Sửa thành công</string>
    <string name="delete_success_message">Xóa thành công</string>
    <string name="date_from_after_date_to">Không thể chọn ngày bắt đầu lớn hơn hoặc bằng ngày kết thúc</string>
    <string name="date_to_before_date_from">Không thẻ chọn ngày kết thúc nhỏ hơn ngày bắt đầu</string>
    <string name="note_invoice_detail">Ghi chú: </string>
    <string name="total_price_invoice_detail">Tổng tiền: </string>
    <string name="price_unit">VNĐ</string>
    <string name="input_name_product">Nhập tên sản phẩm</string>
    <string name="input_name_staff">Nhập tên nhân viên</string>
    <string name="input_username">Nhập tên đăng nhập</string>
    <string name="input_password">**********</string>
    <string name="name_product">Tên sản phẩm</string>
    <string name="price_unit_title_table">Giá(VNĐ)</string>
    <string name="quantity">Số lượng</string>
    <string name="name_new_invoice_button">Hóa đơn mới</string>
    <string name="name_back_to_home_button">Trang chủ</string>
    <string name="price_product">Giá sản phẩm</string>
    <string name="invoice_create_date">Ngày lập hóa đơn</string>
    <string name="total_price_invocie">Tổng giá</string>
    <string name="category_id">Id Loại</string>
    <string name="category_name">Tên Loại</string>
    <string name="note_invoice">Ghi chú</string>
    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="label_username">Tên đăng nhập</string>
    <string name="label_password">Mật khẩu</string>
    <string name="name_login_button">ĐĂNG NHẬP</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="add_product_title">Thêm sản phẩm mới</string>
    <string name="add_staff_title">Thêm nhân viên mới</string>
    <string name="add_category_title">Thêm loại đồ uống mới</string>
    <string name="category_name_label">Tên loại:</string>


    <string name="product_label">Sản phẩm:</string>
    <string name="single_price">Đơn giá:</string>
    <string name="category_label">Loại:</string>

    <string name="full_name_label">Họ tên:</string>
    <string name="phone_label">SĐT:</string>
    <string name="gender_label">Giới tính:</string>
    <string name="address_label">Địa chỉ:</string>
    <string name="card_label">CCCD:</string>

    <string name="name_add_button">THÊM</string>
    <string name="name_cancle_button">HỦY</string>
    <string name="name_update_button">SỬA</string>
    <string name="add_quantity_product">Thêm số lượng sản phẩm</string>
    <string name="quantity_product">Số lượng:</string>
    <string name="update_product_title">Cập nhật sản phẩm</string>
    <string name="input_note_invoice">Nhập ghi chú hóa đơn</string>
    <string name="report_title">Thống kê doanh thu</string>
    <string name="total_invoice">Tổng hóa đơn</string>
    <string name="total_price">Tổng doanh thu</string>
    <string name="nav_title">Quản lý giải khát</string>
    <string name="nav_staff">Quản lý nhân viên</string>
    <string name="nav_category">Quản lý loại</string>
    <string name="nav_information">Chào admin</string>
    <string name="chart_message">Không có hóa đơn trong khoảng thời gian tìm kiếm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>