<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_product_24"
            android:title="@string/nav_product" />
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_bill_24"
            android:title="@string/nav_bill" />
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/ic_bill_24"
            android:title="@string/nav_staff" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_bill_24"
            android:title="@string/nav_category" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24"
            android:title="Đăng xuất" />
    </group>
</menu>