<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="8dp"
    android:background="@color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tvCreateDateInvoiceItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_create_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTotalPriceInvoiceItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/total_price_invocie"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintRight_toLeftOf="@+id/vnd"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingRight="10dp"
            android:text="@string/price_unit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNoteInvoiceItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/note_invoice"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="@id/tvCreateDateInvoiceItem"
            app:layout_constraintTop_toBottomOf="@id/tvCreateDateInvoiceItem" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>