<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_product_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvNameProduct"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/product_label"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edNameProductAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textlines"
            android:gravity="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvPriceProduct"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingRight="8dp"
            android:text="@string/single_price"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edPriceProductAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".80"
                android:gravity="center"
                android:inputType="number"
                android:paddingRight="4dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".20"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/price_unit"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingRight="8dp"
            android:text="@string/category_label"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Spinner để hiển thị danh sách category -->
            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="16dp"
                android:paddingLeft="35dp"/>


        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddNewProduct"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border_btn"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/name_add_button"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnCancelDialog"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border_btn_danger"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/name_cancle_button"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@+id/btnAddNewProduct"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>