<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/update_product_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/product_label"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvNameProductDialogUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textlines"
            android:gravity="center"
            android:text="tenSP"
            android:textSize="18sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:paddingTop="12dp"
            android:paddingRight="8dp"
            android:text="@string/single_price"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edSinglePriceUpdate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".85"
                android:gravity="center"
                android:inputType="number"
                android:paddingRight="4dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".20"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/price_unit"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/quantity_product"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edQuantityProductUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:inputType="number"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_UpdateInvoiceDetailUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border_btn"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/name_update_button"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_CancleInvoiceDetailUpdate"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_CancleInvoiceDetailUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border_btn_danger"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/name_cancle_button"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@+id/btn_UpdateInvoiceDetailUpdate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>