<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background">

    <View
        android:id="@+id/vBackground"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/background_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login_title"
                android:textColor="#C87739"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/label_username"
                android:textColor="#C55C0C"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLogin" />

            <EditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="#C87739"
                android:hint="@string/input_username"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_text"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@id/tvUserName"
                app:layout_constraintRight_toRightOf="@id/tvUserName"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_password"
                android:textColor="#C55C0C"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="@id/edUserName"
                app:layout_constraintRight_toRightOf="@id/edUserName"
                app:layout_constraintTop_toBottomOf="@id/edUserName" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="#C87739"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_text"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@id/tvPassword"
                app:layout_constraintRight_toRightOf="@id/tvPassword"
                app:layout_constraintTop_toBottomOf="@id/tvPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_btn"
                android:text="@string/name_login_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="@id/edPassword"
                app:layout_constraintRight_toRightOf="@id/edPassword"
                app:layout_constraintTop_toBottomOf="@id/edPassword" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:text="@string/forgot_password"
                android:textColor="#5C422D"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>