<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_category_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/category_name_label"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edAddCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textlines"
            android:gravity="center"
            android:textSize="18sp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddNewCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border_btn"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/name_add_button"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnCancelDialogCategory"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelDialogCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border_btn_danger"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/name_cancle_button"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@+id/btnAddNewCategory"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>