<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutNoteBill"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tvNote_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="6dp"
                android:text="@string/note_invoice_detail"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvNoteBill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/textlines"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/tvLabelTotalTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                android:text="@string/total_price_invoice_detail"
                android:textColor="@color/text_light_black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvLayoutTotalTemp"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/tvLayoutTotalTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textlines"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvTotalBill"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:paddingRight="2dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/price_unit" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutProBillTemp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/border_list_detail_invoice"
            android:minHeight="480dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_background"
                android:padding="2dp"
                android:shrinkColumns="0"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:text="@string/name_product"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_column="2"
                        android:layout_marginRight="15dp"
                        android:text="@string/price_unit_title_table"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_marginRight="10dp"
                        android:text="@string/quantity"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </TableRow>
            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcBillDetailList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>